--- a/web/index.html
+++ b/web/index.html
@@ -17,10 +17,10 @@
 	<h1>Menu Principal</h1>
 <ul type="disk">
 <li><a href="index.html">Home</a></li>
-<li><a href="specs.html">Especificações</a></li>
-<li><a href="fotos.html">Fotos</a></li>
-<li><a href="multimidia.html">Multimídia</a></li>
-<li><a href="fale-conosco.html">Fale conosco</a></li>
+<li><a href="institucional.html">Institucional</a></li>
+<li><a href="noticias.html">Notícias</a></li>
+<li><a href="prod-serv.html">Produtos e Serviços</a></li>
+<li><a href="contato.html">Contato</a></li>
 </ul>
 </nav> 
  </header>
