--- a/web/index.html
+++ b/web/index.html
@@ -25,36 +25,43 @@
 </nav> 
  </header>
 
-          <hr/>
-          
-          <div id="cont">
-              <h1 id="cont">Conteudo 01</h1>
-              <p>Exemplo de paragrafo gerado apenas para ter noção do espaço 01</p>
-          </div>
-          <div id="cont">
-              <h1 id="cont">Conteudo 02</h1>
-              <p>Sexta-feira no Tubarão.
-O prato do dia é Bife acebolado com batata frita
-- Todos pratos acompanham feijão, arroz, farofa e salada
+        <hr/>
+        <figure class="foto-legenda">
+        <img src="_imagens/index-img.jpg"/>
+	<figcaption>
+		<h1 id="fig" align="center">InserTI</h1>
+		<h2 id="fig" align="center">Uma nova maneira de ver o mundo.</h2>
+	</figcaption>
+</figure>
 
-Apenas R$ 12,90 + Taxa de Entrega (Consulte)
+          <div id="parceiros">
+              <h1 id="cont" align="center">Soluções</h1>
+              <h2 id="cont" align="center">Soluções completas e personalizadas que atendem a necessidade da sua empresa.</h2>
+              <p>
+O Outsourcing de TI proporciona mais eficiência para pequenas e médias empresas, otimizando investimentos e minimizando riscos. A Agtech tem a solução e custo na medida da sua necessidade, com um time de especialistas que atua e resolve problemas no ambiente de TI de seus clientes.
 
-***Ligue e peça o seu almoço!! (13) 3495.1713***
+O Outsourcing em TI é a melhor solução de negócios para as pequenas e médias empresas que buscam aprimoramento e diferenciais no seu segmento de mercado</p>
+          </div> 
+            <div id="parceiros">  
+              <h1 align="center" id="parceiros" style="padding-top: 30px;">Parceiros</h1>
 
-*Você tem uma empresa e quer ver seus funcionários felizes faça uma cotação com o Tubarão. Almoço para empresas.</p>
-          </div>
-          <div id="cont">
-              <h1 id="cont">Conteudo 03</h1>
-              <p>Conteudo 03</p>
-          </div>
-          <div id="cont">
-              <h1 id="cont">Conteudo 04</h1>
-              <p>Conteudo 04</p>
-          </div>
-          <div id="cont">
-              <h1 id="cont">Conteudo 05</h1>
-              <p>Conteudo 05</p>
-          </div>
+              <table id="parceiro" align="center">
+                  <tr>
+                      <td>
+                          <a href="https://www.sophos.com/" target="_blank"><img src="_imagens/sophos-logo.png" alt="Logo Sophos" id="parceiros"/></a>
+                      </td>
+                      <td>
+                          <a href="http://oracle.com/" target="_blank"><img src="_imagens/oracle-db.png" alt="Logo Oracle DataBase" id="parceiros"/></a>
+                      </td>
+                      <td>
+                          <a href="http://microsoft.com/" target="_blank"><img src="_imagens/microsoft-logo.png" alt="Logo Microsoft" id="parceiros"/></a>
+                      </td>
+                      <td>
+                          <a href="https://www.manageengine.com/" target="_blank"><img src="_imagens/manage-engine-logo.png" alt="Logo Manage Engine" id="parceiros"/></a>
+                      </td>                 
+                  </tr>
+              </table>
+        </div>
       </div>
     </body>
 </html>
