--- a/web/index.html
+++ b/web/index.html
@@ -47,16 +47,16 @@ O Outsourcing em TI é a melhor solução de negócios para as pequenas e média
 
               <table id="parceiro" align="center">
                   <tr>
-                      <td>
+                      <td id="parceiro">
                           <a href="https://www.sophos.com/" target="_blank"><img src="_imagens/sophos-logo.png" alt="Logo Sophos" id="parceiros"/></a>
                       </td>
-                      <td>
+                      <td id="parceiro">
                           <a href="http://oracle.com/" target="_blank"><img src="_imagens/oracle-db.png" alt="Logo Oracle DataBase" id="parceiros"/></a>
                       </td>
-                      <td>
+                      <td id="parceiro">
                           <a href="http://microsoft.com/" target="_blank"><img src="_imagens/microsoft-logo.png" alt="Logo Microsoft" id="parceiros"/></a>
                       </td>
-                      <td>
+                      <td id="parceiro">
                           <a href="https://www.manageengine.com/" target="_blank"><img src="_imagens/manage-engine-logo.png" alt="Logo Manage Engine" id="parceiros"/></a>
                       </td>                 
                   </tr>
