--- a/web/index.html
+++ b/web/index.html
@@ -11,7 +11,7 @@
       <div id="interface">  
 	<header id="cabecalho">
 
-	<img id="logo" src="_imagens/inserti.png"/>
+	<img id="logo" src="_imagens/inserti.png" alt="InserTI Logotipo"/>
 
 <nav id="menu">
 	<h1>Menu Principal</h1>
@@ -27,10 +27,10 @@
 
         <hr/>
         <figure class="foto-legenda">
-        <img src="_imagens/index-img.jpg"/>
+        <img src="_imagens/index-img.jpg" alt="InserTI, Uma nova maneira de ver o mundo."/>
 	<figcaption>
-		<h1 id="fig" align="center">InserTI</h1>
-		<h2 id="fig" align="center">Uma nova maneira de ver o mundo.</h2>
+		<h1 id="fig">InserTI</h1>
+		<h2 id="fig">Uma nova maneira de ver o mundo.</h2>
 	</figcaption>
 </figure>
 
@@ -43,21 +43,21 @@ O Outsourcing de TI proporciona mais eficiência para pequenas e médias empresa
 O Outsourcing em TI é a melhor solução de negócios para as pequenas e médias empresas que buscam aprimoramento e diferenciais no seu segmento de mercado</p>
           </div> 
             <div id="parceiros">  
-              <h1 align="center" id="parceiros" style="padding-top: 30px;">Parceiros</h1>
+              <h1 id="parceiros">Parceiros</h1>
 
               <table id="parceiro" align="center">
                   <tr>
-                      <td id="parceiro">
+                      <td id="logos">
                           <a href="https://www.sophos.com/" target="_blank"><img src="_imagens/sophos-logo.png" alt="Logo Sophos" id="parceiros"/></a>
                       </td>
-                      <td id="parceiro">
+                      <td id="logos">
                           <a href="http://oracle.com/" target="_blank"><img src="_imagens/oracle-db.png" alt="Logo Oracle DataBase" id="parceiros"/></a>
                       </td>
-                      <td id="parceiro">
+                      <td id="logos">
                           <a href="http://microsoft.com/" target="_blank"><img src="_imagens/microsoft-logo.png" alt="Logo Microsoft" id="parceiros"/></a>
                       </td>
-                      <td id="parceiro">
-                          <a href="https://www.manageengine.com/" target="_blank"><img src="_imagens/manage-engine-logo.png" alt="Logo Manage Engine" id="parceiros"/></a>
+                      <td id="logos">
+                          <a href="https://www.manageengine.com/" target="_blank"><img src="_imagens/manage-engine-logo.png" alt="Logo Manage Engine" /></a>
                       </td>                 
                   </tr>
               </table>
