Teste de sincronia institucional

--- a/web/institucional.html
+++ b/web/institucional.html
@@ -29,19 +29,11 @@
           
           <div id="cont">
               <h1 id="cont">Conteudo 01</h1>
-              <p>Exemplo de paragrafo gerado apenas para ter noção do espaço 01</p>
+              <p>Exemplo 01</p>
           </div>
           <div id="cont">
               <h1 id="cont">Conteudo 02</h1>
-              <p>Sexta-feira no Tubarão.
-O prato do dia é Bife acebolado com batata frita
-- Todos pratos acompanham feijão, arroz, farofa e salada
-
-Apenas R$ 12,90 + Taxa de Entrega (Consulte)
-
-***Ligue e peça o seu almoço!! (13) 3495.1713***
-
-*Você tem uma empresa e quer ver seus funcionários felizes faça uma cotação com o Tubarão. Almoço para empresas.</p>
+              <p>Teste de commit </p>
           </div>
           <div id="cont">
               <h1 id="cont">Conteudo 03</h1>
