Novas noticias do dia

--- a/web/noticias.html
+++ b/web/noticias.html
@@ -28,24 +28,37 @@
           <hr/>
           
           <div id="cont">
-              <h1 id="cont">Conteudo 01</h1>
-              <p>Exemplo de paragrafo gerado apenas para ter noção do espaço 01</p>
+              <h1 id="cont">"Gigabyte revela novas versões dos minicomputadores Brix, com processadores Kaby Lake-R"</h1>
+              <center><img width=800 height="400" title="Logo Gigabyte" src="_imagens/gigabyte-logo.jpg" alt="" /></center>
+              <p>O modelo GB-BRi5-8250 mede 34,4 x 112,6 x 119,4 mm, tem o processador Core i5-8250U com quatro núcleos de 3,4 GHz,
+             dois slots de memória DDR4 de até 64 GiB e 2400 MHz, vídeo  integrado Intel Graphics 620, Wi-Fi IEEE 802.11ac, 
+             Bluetooth 4.2, Wi-Fi dual band AC-3168, áudio Realtek ALC255, uma porta Gigabit Ethernet, uma porta HDMI 2.0, 
+             uma porta mini DisplayPort 1.2, até dois slots M.2 2280, duas portas USB 3.0, uma porta USB 3.1, uma porta USB 3.1 
+             tipo C, sistema operacional Windows 10 e suporte VESA.</p>
           </div>
           <div id="cont">
-              <h1 id="cont">Conteudo 02</h1>
-              <p>Sexta-feira no Tubarão.
-O prato do dia é Bife acebolado com batata frita
-- Todos pratos acompanham feijão, arroz, farofa e salada
-
-Apenas R$ 12,90 + Taxa de Entrega (Consulte)
-
-***Ligue e peça o seu almoço!! (13) 3495.1713***
-
-*Você tem uma empresa e quer ver seus funcionários felizes faça uma cotação com o Tubarão. Almoço para empresas.</p>
+              <h1 id="cont">Estúdio brasileiro anuncia o jogo de aventura musical Distortions</h1>
+              <center><img width=800 height="400" title="Simple Player" src="_imagens/single player.jpg" alt=""/></center>
+              <p>O estúdio brasileiro Among Giants divulgou o lançamento de Distortions, seu novo jogo de aventura musical
+            para computadores. O título é um single player em terceira pessoa, em mundo aberto e dividido em capítulos modulares
+            com seguintes personagens: a Menina, o Mascarado e os monstros. O jogo mostra a história de uma violinista, 
+            chamada Menina, que acorda após um acidente de carro em um vale onde o tempo parece estar parado. A personagem 
+            precisa decidir como seguir a vida, enquanto recupera sua identidade ao lembrar o passado com a ajuda do Mascarado. 
+            Durante a exploração do vale, a Menina encontra um diário com algumas anotações, que a levam a um violino. A Menina 
+            deve enfrentar os monstros e tocar o violino para moldar o mundo com a música, criando efeitos, diversas mudanças 
+            e ganhando novas habilidades. O novo jogo Distortions estará disponível nos próximos dias na plataforma Steam 
+            por R$ 40. O Distortions foi desenvolvido durante nove anos, indicado em 15 festivais ao redor do mundo e 
+            ganhou cinco prêmios em 2017.</p>
           </div>
           <div id="cont">
-              <h1 id="cont">Conteudo 03</h1>
-              <p>Conteudo 03</p>
+              <h1 id="cont">Maxprint lança seus novos fones de ouvido Alien DJ</h1>
+              <center><img width=800 height="400" title="Fones Maxprint" src="_imagens/fone max print.jpg" alt=""/></center>
+              <p>A Maxprint divulgou o lançamento dos seus novos fones de ouvido Alien DJ, que vêm com diafragmas de titânio, 
+                que impedem vibrações indesejadas e emitem som límpido. Os fones são dobráveis, reproduzem sons HD em até 
+                60 kHz, têm microfone embutido, drivers de 40 mm, 32 Ohm de impedância, sensibilidade de 105 +/- 3dB até 1KHz,
+                frequência de 20 Hz a 20 kHz, conector de 3,5 mm, cabo de 1,5 m e a função HandsFree, com botão para 
+                atendimento de chamadas. Os novos fones de ouvido Alien DJ já estão à venda por R$ 169,90 (preço válido 
+                até o final de abril de 2018), na cor preta.</p>
           </div>
           <div id="cont">
               <h1 id="cont">Conteudo 04</h1>
