--- a/web/index.html
+++ b/web/index.html
@@ -35,10 +35,10 @@
 </figure>
 
           <div id="parceiros">
-              <h1 id="cont" align="center">Soluções</h1>
+              <h1 id="cont" align="center">Soluções em TI</h1>
               <h2 id="cont" align="center">Soluções completas e personalizadas que atendem a necessidade da sua empresa.</h2>
               <p>
-O Outsourcing de TI proporciona mais eficiência para pequenas e médias empresas, otimizando investimentos e minimizando riscos. A Agtech tem a solução e custo na medida da sua necessidade, com um time de especialistas que atua e resolve problemas no ambiente de TI de seus clientes.
+O Outsourcing de TI proporciona mais eficiência para pequenas e médias empresas, otimizando investimentos e minimizando riscos. A InserTI tem a solução e custo na medida da sua necessidade, com um time de especialistas que atua e resolve problemas no ambiente de TI de seus clientes.
 
 O Outsourcing em TI é a melhor solução de negócios para as pequenas e médias empresas que buscam aprimoramento e diferenciais no seu segmento de mercado</p>
           </div> 
