Novas noticias do dia 2.0 e acrescimo de estilo

--- a/web/noticias.html
+++ b/web/noticias.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 
+
 <html>
     <head>
         <title>Notícias</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="_css/estilo.css"/>
+        <link href="_css/estilo_noticia.css"/>
     </head>
     <body>
       <div id="interface">  
@@ -27,47 +29,139 @@
 
           <hr/>
           
-          <div id="cont">
-              <h1 id="cont">"Gigabyte revela novas versões dos minicomputadores Brix, com processadores Kaby Lake-R"</h1>
-              <center><img width=800 height="400" title="Logo Gigabyte" src="_imagens/gigabyte-logo.jpg" alt=""/></center>
-              <p>O modelo GB-BRi5-8250 mede 34,4 x 112,6 x 119,4 mm, tem o processador Core i5-8250U com quatro núcleos de 3,4 GHz,
-             dois slots de memória DDR4 de até 64 GiB e 2400 MHz, vídeo  integrado Intel Graphics 620, Wi-Fi IEEE 802.11ac, 
-             Bluetooth 4.2, Wi-Fi dual band AC-3168, áudio Realtek ALC255, uma porta Gigabit Ethernet, uma porta HDMI 2.0, 
-             uma porta mini DisplayPort 1.2, até dois slots M.2 2280, duas portas USB 3.0, uma porta USB 3.1, uma porta USB 3.1 
-             tipo C, sistema operacional Windows 10 e suporte VESA.</p>
+          <h1 align="center">NOTÍCIA</h1>
+          <br>
+          <h2>Praia Grande, 05 de Março de 2018</h2>
+          <hr size="1"/>
+          <br>
+          <h1>ESPAÇO PARA COLOCAR NOTICA RECENTE</h1>
+          <br>
+          <h2>Praia Grande, 04 de Março de 2018</h2>
+          <hr size="1"/>
+          <h2>Praia Grande, 03 de Março de 2018</h2>
+          <hr size="1"/>
+          <br><br>
+          <h2>Praia Grande, 02 de Março de 2018</h2>
+          <hr size="1"/>
+          
+              <a href="https://www.clubedohardware.com.br/noticias/computadores/gigabyte-revela-novas-vers%C3%B5es-dos-minicomputadores-brix-com-processadores-kaby-lake-r-r50577/"
+                             target="_blank"><table>
+                  <tr>
+                      <td rowspan="3">
+                          <img width="200" height="200"  title="Logo Gigabyte"
+                            src="_imagens/gigabyte-logo.jpg" alt=""/>
+                      </td>   
+                      <td>
+                         <h1 >Gigabyte revela novas versões dos 
+                            minicomputadores Brix,com processadores Kaby Lake-R
+                          </h1>
+                      </td>
+                  </tr>
+                  <tr>
+                      <td><p>O modelo GB-BRi5-8250 mede 34,4 x 112,6 x 119,4 mm,
+                           tem o processador Core i5-8250U...</p>
+                      </td>
+                  </tr>
+                  <tr>
+                      <td align="right">Clube do Hardware</td>
+                  </tr>
+              </table></a>
+     <hr size="1"/>
+                <a href="https://g1.globo.com/economia/noticia/entenda-o-que-muda-nos-apps-de-transporte-como-uber-e-cabify-apos-camara-aprovar-novas-regras.ghtml" target="_blank">
+                     <table>
+                  <tr>
+                      <td rowspan="3">
+                          <img width="200" height="200" src="_imagens/entenda oque muda.jpg" alt="" />
+                      </td>   
+                      <td>
+                         <h1>Entenda o que muda nos apps de transporte como 
+                             Uber e Cabify após Câmara aprovar novas regras
+                          </h1>
+                      </td>
+                  </tr>
+                  <tr>
+                      <td><p>Projeto deu a prefeituras e ao DF poder para regulamentar 
+                         e fiscalizar serviços, mas não traz obrigação de carros precisarem de placa vermelha....</p>
+                      </td>
+                  </tr>
+                  <tr>
+                      <td align="right">G1 globo.com</td>
+                  </tr>
+              </table> 
+                </a>
+     <hr size="1"/>
+              <a href="https://www.clubedohardware.com.br/noticias/jogos/est%C3%BAdio-brasileiro-anuncia-o-jogo-de-aventura-musical-distortions-r50576/"
+                           target="_blank">
+                  <table>
+                  <tr>
+                      <td rowspan="3">
+                        <img width="200" height="200" title="Simple Player"
+                          src="_imagens/single player.jpg" alt=""/>
+                      </td>
+                      <td>
+                        <h1>Estúdio brasileiro anuncia o jogo de aventura musical Distortions</h1>  
+                      </td>
+                  </tr>
+                  <tr>
+                      <td>
+                        <p>O estúdio brasileiro Among Giants divulgou o 
+                        lançamento de Distortions, seu novo jogo de aventura 
+                        musicalpara computadores.</p> 
+                      </td>
+                  </tr>
+                  <tr>
+                      <td align="right">Clube do Hardware</td>
+                  </tr>
+              </table></a> 
+     <hr size="1"/>
+     <a href="http://g1.globo.com/tecnologia/blog/seguranca-digital/post/por-que-dados-pessoais-nao-sao-protegidos-como-cartoes-de-credito.html" target="_blank">
+         <table>
+                  <tr>
+                      <td rowspan="3">
+                          <img width="200" height="200" src="_imagens/Por que dados pessoais.jpg" alt=""/>        
+                      </td>
+                      <td>
+                        <h1>Por que dados pessoais não são protegidos como cartões de crédito?</h1>
+                      </td>
+                  </tr>
+                  <tr>
+                    <td>
+                        <p>
+                            Recentemente, o site da Netshoes sofreu um ataque 
+                            hacker que resultou na divulgação de dados não-bancários de alguns clientes.
+                        </p>   
+                    </td>
+                  </tr>
+                  <tr>
+                      <td align="right">G1 globo.com</td>
+                  </tr>
+              </table>
+     </a>
+     <hr size="1"/>
+     <a href="https://www.clubedohardware.com.br/noticias/audio/maxprint-lan%C3%A7a-seus-novos-fones-de-ouvido-alien-dj-r50575/"
+                           target="_blank">         
+              <table>
+                  <tr>
+                      <td rowspan="3">
+                        <img width="200" height="200" title="Fones Maxprint" 
+                             src="_imagens/fone max print.jpg" alt=""/>   
+                      </td>
+                      <td>
+                        <h1>Maxprint lança seus novos fones de ouvido Alien DJ</h1>
+                      </td>
+                  </tr>
+                  <tr>
+                    <td>
+                        <p>A Maxprint divulgou o lançamento dos seus novos fones
+                        de ouvido Alien DJ, que vêm com diafragmas de titânio, 
+                        que impedem vibrações indesejadas...</p>   
+                    </td>
+                  </tr>
+                  <tr>
+                      <td align="right">Clube do Hardware</td>
+                  </tr>
+              </table></a>
+     <hr size="1"/>     
           </div>
-          <div id="cont">
-              <h1 id="cont">Estúdio brasileiro anuncia o jogo de aventura musical Distortions</h1>
-              <center><img width=800 height="400" title="Simple Player" src="_imagens/single player.jpg" alt=""/></center>
-              <p>O estúdio brasileiro Among Giants divulgou o lançamento de Distortions, seu novo jogo de aventura musical
-            para computadores. O título é um single player em terceira pessoa, em mundo aberto e dividido em capítulos modulares
-            com seguintes personagens: a Menina, o Mascarado e os monstros. O jogo mostra a história de uma violinista, 
-            chamada Menina, que acorda após um acidente de carro em um vale onde o tempo parece estar parado. A personagem 
-            precisa decidir como seguir a vida, enquanto recupera sua identidade ao lembrar o passado com a ajuda do Mascarado. 
-            Durante a exploração do vale, a Menina encontra um diário com algumas anotações, que a levam a um violino. A Menina 
-            deve enfrentar os monstros e tocar o violino para moldar o mundo com a música, criando efeitos, diversas mudanças 
-            e ganhando novas habilidades. O novo jogo Distortions estará disponível nos próximos dias na plataforma Steam 
-            por R$ 40. O Distortions foi desenvolvido durante nove anos, indicado em 15 festivais ao redor do mundo e 
-            ganhou cinco prêmios em 2017.</p>
-          </div>
-          <div id="cont">
-              <h1 id="cont">Maxprint lança seus novos fones de ouvido Alien DJ</h1>
-              <center><img width=800 height="400" title="Fones Maxprint" src="_imagens/fone max print.jpg" alt=""/></center>
-              <p>A Maxprint divulgou o lançamento dos seus novos fones de ouvido Alien DJ, que vêm com diafragmas de titânio, 
-                que impedem vibrações indesejadas e emitem som límpido. Os fones são dobráveis, reproduzem sons HD em até 
-                60 kHz, têm microfone embutido, drivers de 40 mm, 32 Ohm de impedância, sensibilidade de 105 +/- 3dB até 1KHz,
-                frequência de 20 Hz a 20 kHz, conector de 3,5 mm, cabo de 1,5 m e a função HandsFree, com botão para 
-                atendimento de chamadas. Os novos fones de ouvido Alien DJ já estão à venda por R$ 169,90 (preço válido 
-                até o final de abril de 2018), na cor preta.</p>
-          </div>
-          <div id="cont">
-              <h1 id="cont">Conteudo 04</h1>
-              <p>Conteudo 04</p>
-          </div>
-          <div id="cont">
-              <h1 id="cont">Conteudo 05</h1>
-              <p>Conteudo 05</p>
-          </div>
-      </div>
     </body>
 </html>
