--- a/web/contato.html
+++ b/web/contato.html
@@ -4,7 +4,7 @@
 
 <html>
     <head>
-        <title>Home</title>
+        <title>Contato</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="_css/estilo.css"/>
@@ -27,22 +27,40 @@
 </nav> 
  </header>
 
-        <hr/>
-        <figure class="foto-legenda">
-        <img src="_imagens/index-img.jpg" alt="InserTI, Uma nova maneira de ver o mundo."/>
-	<figcaption>
-		<h1 id="fig">InserTI</h1>
-		<h2 id="fig">Uma nova maneira de ver o mundo.</h2>
-	</figcaption>
-</figure>
-
-          <div id="parceiros">
-              <h1 id="cont" align="center">Soluções</h1>
-              <h2 id="cont" align="center">Soluções completas e personalizadas que atendem a necessidade da sua empresa.</h2>
-              <p>
-O Outsourcing de TI proporciona mais eficiência para pequenas e médias empresas, otimizando investimentos e minimizando riscos. A Agtech tem a solução e custo na medida da sua necessidade, com um time de especialistas que atua e resolve problemas no ambiente de TI de seus clientes.
-
-O Outsourcing em TI é a melhor solução de negócios para as pequenas e médias empresas que buscam aprimoramento e diferenciais no seu segmento de mercado</p>
+       <div id="cont">
+	    <div id="contato">
+		<h1 id="cont" align="center">Contato</h1>
+		<form id="contact_form" action="#" method="POST" enctype="multipart/form-data">
+	    <div class="row">
+		<label for="name">Seu nome:</label><br />
+		<input id="name" class="input" name="name" type="text" value="" size="30" /><br />
+	    </div>
+	    <div class="row">
+		<label for="email">Seu email:</label><br />
+		<input id="email" class="input" name="email" type="text" value="" size="30" /><br />
+	    </div>
+	    <div class="row">
+		<label for="message">Menssagem:</label><br />
+		<textarea id="message" class="input" name="message" rows="7" cols="30"></textarea><br />
+	      </div>
+		
+	    <input id="submit_button" type="submit" value="Enviar email" />
+        </form>	
+		<h1></h1>
+        </div>
+	   </div>
+          <div id="parceiros" align="center">
+              <h1 id="cont" align="center">Outros meios:</h1>
+			  
+			 <div id="container">
+			  <a href="https://www.facebook.com/"><img border="0" src="_imagens/facebook-icon.png" /></a>
+			 
+			
+			  <a href="https://www.youtube.com/"><img border="0" src="_imagens/Youtube-icon.png"/></a>
+		
+			
+			  <a href="https://twitter.com/"><img border="0" src="_imagens/twitter-icon.png" /></a>
+			 </div>
           </div> 
             <div id="parceiros">  
               <h1 id="parceiros">Parceiros</h1>
