--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
     <head>
         <title>Home</title>
@@ -29,34 +28,34 @@
         <figure class="foto-legenda">
         <img src="_imagens/index-img.jpg" alt="InserTI, Uma nova maneira de ver o mundo."/>
 	<figcaption>
-		<h1 id="fig">InserTI</h1>
-		<h2 id="fig">Uma nova maneira de ver o mundo.</h2>
+		<h1 class="fig">InserTI</h1>
+		<h2 class="fig">Uma nova maneira de ver o mundo.</h2>
 	</figcaption>
 </figure>
 
-          <div id="parceiros">
-              <h1 id="cont" align="center">Soluções em TI</h1>
-              <h2 id="cont" align="center">Soluções completas e personalizadas que atendem a necessidade da sua empresa.</h2>
+          <div class="parceiros">
+              <h1 class="cont" align="center">Soluções em TI</h1>
+              <h2 class="cont" align="center">Soluções completas e personalizadas que atendem a necessidade da sua empresa.</h2>
               <p>
 O Outsourcing de TI proporciona mais eficiência para pequenas e médias empresas, otimizando investimentos e minimizando riscos. A InserTI tem a solução e custo na medida da sua necessidade, com um time de especialistas que atua e resolve problemas no ambiente de TI de seus clientes.
 
 O Outsourcing em TI é a melhor solução de negócios para as pequenas e médias empresas que buscam aprimoramento e diferenciais no seu segmento de mercado</p>
           </div> 
-            <div id="parceiros">  
-              <h1 id="parceiros">Parceiros</h1>
+            <div class="parceiros">  
+              <h1 class="parceiros">Parceiros</h1>
 
               <table id="parceiro" align="center">
                   <tr>
-                      <td id="logos">
-                          <a href="https://www.sophos.com/" target="_blank"><img src="_imagens/sophos-logo.png" alt="Logo Sophos" id="parceiros"/></a>
+                      <td class="logos">
+                          <a href="https://www.sophos.com/" target="_blank"><img src="_imagens/sophos-logo.png" alt="Logo Sophos" class="parceiros"/></a>
                       </td>
-                      <td id="logos">
-                          <a href="http://oracle.com/" target="_blank"><img src="_imagens/oracle-db.png" alt="Logo Oracle DataBase" id="parceiros"/></a>
+                      <td class="logos">
+                          <a href="http://oracle.com/" target="_blank"><img src="_imagens/oracle-db.png" alt="Logo Oracle DataBase" class="parceiros"/></a>
                       </td>
-                      <td id="logos">
-                          <a href="http://microsoft.com/" target="_blank"><img src="_imagens/microsoft-logo.png" alt="Logo Microsoft" id="parceiros"/></a>
+                      <td class="logos">
+                          <a href="http://microsoft.com/" target="_blank"><img src="_imagens/microsoft-logo.png" alt="Logo Microsoft" class="parceiros"/></a>
                       </td>
-                      <td id="logos">
+                      <td class="logos">
                           <a href="https://www.manageengine.com/" target="_blank"><img src="_imagens/manage-engine-logo.png" alt="Logo Manage Engine" /></a>
                       </td>                 
                   </tr>
