--- a/web/contato.html
+++ b/web/contato.html
@@ -26,8 +26,9 @@
 </ul>
 </nav> 
  </header>
+          <hr>
 
-       <div id="cont">
+       <div class="cont">
 	    <div id="contato">
 		<h1 id="cont" align="center">Contato</h1>
 		<form id="contact_form" action="#" method="POST" enctype="multipart/form-data">
@@ -50,33 +51,33 @@
         </div>
 	   </div>
           <div id="parceiros" align="center">
-              <h1 id="cont" align="center">Outros meios:</h1>
+              <h1 align="center">Outros meios:</h1>
 			  
 			 <div id="container">
-			  <a href="https://www.facebook.com/"><img border="0" src="_imagens/facebook-icon.png" /></a>
+                             <a href="https://www.facebook.com/"><img src="_imagens/facebook-icon.png" alt="Facebook" /></a>
 			 
 			
-			  <a href="https://www.youtube.com/"><img border="0" src="_imagens/Youtube-icon.png"/></a>
+                             <a href="https://www.youtube.com/"><img src="_imagens/Youtube-icon.png" alt="Youtube"/></a>
 		
 			
-			  <a href="https://twitter.com/"><img border="0" src="_imagens/twitter-icon.png" /></a>
+			  <a href="https://twitter.com/"><img src="_imagens/twitter-icon.png" alt="Twitter" /></a>
 			 </div>
           </div> 
-            <div id="parceiros">  
-              <h1 id="parceiros">Parceiros</h1>
+            <div class="parceiros">  
+              <h1>Parceiros</h1>
 
               <table id="parceiro" align="center">
                   <tr>
-                      <td id="logos">
-                          <a href="https://www.sophos.com/" target="_blank"><img src="_imagens/sophos-logo.png" alt="Logo Sophos" id="parceiros"/></a>
+                      <td class="logos">
+                          <a href="https://www.sophos.com/" target="_blank"><img src="_imagens/sophos-logo.png" alt="Logo Sophos" /></a>
                       </td>
-                      <td id="logos">
-                          <a href="http://oracle.com/" target="_blank"><img src="_imagens/oracle-db.png" alt="Logo Oracle DataBase" id="parceiros"/></a>
+                      <td class="logos">
+                          <a href="http://oracle.com/" target="_blank"><img src="_imagens/oracle-db.png" alt="Logo Oracle DataBase" /></a>
                       </td>
-                      <td id="logos">
-                          <a href="http://microsoft.com/" target="_blank"><img src="_imagens/microsoft-logo.png" alt="Logo Microsoft" id="parceiros"/></a>
+                      <td class="logos">
+                          <a href="http://microsoft.com/" target="_blank"><img src="_imagens/microsoft-logo.png" alt="Logo Microsoft"/></a>
                       </td>
-                      <td id="logos">
+                      <td class="logos">
                           <a href="https://www.manageengine.com/" target="_blank"><img src="_imagens/manage-engine-logo.png" alt="Logo Manage Engine" /></a>
                       </td>                 
                   </tr>
