--- a/web/index.html
+++ b/web/index.html
@@ -42,18 +42,18 @@ O Outsourcing de TI proporciona mais eficiência para pequenas e médias empresa
 O Outsourcing em TI é a melhor solução de negócios para as pequenas e médias empresas que buscam aprimoramento e diferenciais no seu segmento de mercado</p>
           </div> 
             <div class="parceiros">  
-              <h1 class="parceiros">Parceiros</h1>
+              <h1>Parceiros</h1>
 
               <table id="parceiro" align="center">
                   <tr>
                       <td class="logos">
-                          <a href="https://www.sophos.com/" target="_blank"><img src="_imagens/sophos-logo.png" alt="Logo Sophos" class="parceiros"/></a>
+                          <a href="https://www.sophos.com/" target="_blank"><img src="_imagens/sophos-logo.png" alt="Logo Sophos"/></a>
                       </td>
                       <td class="logos">
-                          <a href="http://oracle.com/" target="_blank"><img src="_imagens/oracle-db.png" alt="Logo Oracle DataBase" class="parceiros"/></a>
+                          <a href="http://oracle.com/" target="_blank"><img src="_imagens/oracle-db.png" alt="Logo Oracle DataBase"/></a>
                       </td>
                       <td class="logos">
-                          <a href="http://microsoft.com/" target="_blank"><img src="_imagens/microsoft-logo.png" alt="Logo Microsoft" class="parceiros"/></a>
+                          <a href="http://microsoft.com/" target="_blank"><img src="_imagens/microsoft-logo.png" alt="Logo Microsoft"/></a>
                       </td>
                       <td class="logos">
                           <a href="https://www.manageengine.com/" target="_blank"><img src="_imagens/manage-engine-logo.png" alt="Logo Manage Engine" /></a>
